crates/swc_ecma_parser/tests/test262-error-references/fail/4d117d87d4a40541.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/4d117d87d4a40541.js:1:10
  |
1 | continue 2;
  |          ^

